--- a/presidential_economic_counter.ipynb
+++ b/presidential_economic_counter.ipynb
@@ -24,10 +24,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fed_rates_path = \"C:/Users/lamae/OneDrive/Desktop/FEDFUNDS (1).csv\"\n",
-    "CPI_path = \"C:/Users/lamae/OneDrive/Desktop/CPALTT01USQ657N.csv\"\n",
-    "unemployment_path = \"C:/Users/lamae/OneDrive/Desktop/UNRATE (2).csv\"\n",
-    "GDP_path = \"C:/Users/lamae/OneDrive/Desktop/GDP.csv\"\n",
+    "fed_rates_path = \"C:/Users/####/OneDrive/Desktop/FEDFUNDS (1).csv\"\n",
+    "CPI_path = \"C:/Users/####/OneDrive/Desktop/CPALTT01USQ657N.csv\"\n",
+    "unemployment_path = \"C:/Users/####/OneDrive/Desktop/UNRATE (2).csv\"\n",
+    "GDP_path = \"C:/Users/####/OneDrive/Desktop/GDP.csv\"\n",
     "\n",
     "fed_rates = pd.read_csv(fed_rates_path)\n",
     "CPI = pd.read_csv(CPI_path)\n",
